--- a/FedEXCIL/src/main/resources/config.properties
+++ b/FedEXCIL/src/main/resources/config.properties
@@ -1,4 +1,5 @@
 Env=STG
+MainEmailAddress=ravina.prajapati@samyak.com,asharma@samyak.com,parth.doshi@samyak.com
 DEVURL=http://192.168.117.22:8073/login
 STGURL=http://10.20.104.71:9077/TestApplicationUtility/CILOrderCreationClient
 PREPRODURL=http://10.20.104.71:9075/TestApplicationUtility/CILOrderCreationClient
